objects/LLC_BI__Loan_Compliance__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Property_Type__c</fullName>
        <description>This is a required field.  This field indicates whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</description>
        <label>Property Securing Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Manufactured housing</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Multifamily dwelling</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 One to four family dwelling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Property_Value__c</fullName>
        <description>This is a required field. This field indicates in dollars, the value of the property securing the covered loan or, in the case of an application, proposed to secure the covered loan, relied on in making the credit decision.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Securing Property Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_State__c</fullName>
        <description>This is a required field.  This field indicates the State of the property securing the loan (or proposed to secure a loan)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Total_Units__c</fullName>
        <description>This is a required field.  This field indicates the number of individual dwelling units related to the property securing the covered loan or, in the case of an application, proposed to secure the covered loan.</description>
        <label>Property Securing Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Zip__c</fullName>
        <description>This is a required field.  This field indicates the ZIP of the property securing the loan (or proposed to secure a loan)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Purchaser_Type__c</fullName>
        <description>This is a required field. This field indicates the type of entity that purchased the loan.</description>
        <inlineHelpText>If you sell a loan in the same calendar year in which it was originated or purchased, you must identify the type of purchaser. If you don’t sell the loan during the same calendar year or if it didn’t result in a loan origination, enter code “0”.</inlineHelpText>
        <label>Type of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 Not Applicable</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 Fannie Mae</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Ginnie Mae</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Freddie Mac</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 Farmer Mac</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 Private Securitizer</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 Commercial bank, savings bank, or savings association</label>
                </value>
                <value>
                    <fullName>71</fullName>
                    <label>71 Credit union, mortgage company, or finance company</label>
                </value>
                <value>
                    <fullName>72</fullName>
                    <label>72 Life insurance company</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 Affiliate institution</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9 Other type of purchaser</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Reverse_Mortgage__c</fullName>
        <description>This is a required field.  This field indicates whether the covered loan is, or the application is for, a reverse mortgage.</description>
        <label>Reverse Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Submission_Of_Application__c</fullName>
        <description>This is a required field.  This field indicates whether the applicant or borrower submitted the application directly to your institution.</description>
        <label>Submission of Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Submitted directly to your institution</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Not submitted directly to your institution</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Total_Loan_Costs__c</fullName>
        <description>This is a required field.  This field indicates in dollars, the amount of total loan costs.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Loan Costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Total_Points_Fees__c</fullName>
        <description>This is a required field.  This field indicates in dollars, the total points and fees charged in connection with the covered loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the amount is zero, enter 0.</inlineHelpText>
        <label>Total Points and Fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Universal_Loan_Identifier__c</fullName>
        <description>This is a required field.  This field is the identifier used to identify and retrieve a loan or application that contains the FI&apos;s LEI, an internally generated sequence of characters, and a check digit</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The ULI begins with the financial institution&apos;s Legal Entity Identifier.  Follows the Legal Entity Identifier with up to 23 additional characters to identify the covered loan or application.  Ends with a two-character check digit that is calculated using</inlineHelpText>
        <label>Universal Loan Identifier (ULI)</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This is a required field. This field indicates as a percentage, to at least three (3) decimal places, the interest rate.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Numbers calculated to beyond three (3) decimal places may either be reported beyond three (3) decimal places or rounded or truncated to three (3) decimal places. Decimal place trailing zeros may be either included or omitted.</inlineHelpText>
        <label>Interest Rate</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Introductory_Rate_Period__c</fullName>
        <description>This is a required field. This field indicates the number of months, or proposed number of months in the case of an application, until the first date the interest rate may change after closing or account opening.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Introductory Rate Period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Id__c</fullName>
        <description>This is a required field.  This field indicates the unique loan or loan application number.</description>
        <formula>CASESAFEID(LLC_BI__Loan__c)</formula>
        <label>Loan Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Term__c</fullName>
        <description>This is a required field. This field indicates the number of months after which the legal obligation will mature or terminate, or would have matured or terminated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loan Compliances</relationshipLabel>
        <relationshipName>Loan_Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_LO_NMLSR_Id__c</fullName>
        <description>This is a required field.  This field indicates the Nationwide Mortgage Licensing System and Registry mortgage loan originator unique identifier (NMLSR ID) for the mortgage loan originator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Loan Originator NMLSR Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prepayment_Penalty_Term__c</fullName>
        <description>This is a required field.  This field indicates the term, in months, of any prepayment penalty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter &quot;NA&quot; if the requirement to report prepayment penalty term does not apply to the covered loan or application that your institution is reporting.</inlineHelpText>
        <label>Prepayment Penalty Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Spread__c</fullName>
        <description>This is a required field.  This field indicates the rate spread which is the difference between the annual percentage rate and average prime offer. The price data take the form of a &quot;rate spread.&quot; Lenders must report the spread (difference) between the annual percentage rate (APR) on a loan and the rate on Treasury securities of comparable maturity - but only for loans with spreads above designated thresholds. So rate spreads are reported for some, but not all, reported home loans. The rate spread, along with Lien Status and HOEPA help interpret the pricing data.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter, as a percentage, to at least three (3) decimal places. Numbers calculated to beyond three (3) decimal places may either be reported beyond three (3) decimal places or rounded or truncated to three (3) decimal places.</inlineHelpText>
        <label>Rate Spread (##.### format)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Loan Compliance</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LCO-{000000}</displayFormat>
        <label>Loan Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Compliances</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2017</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2017</description>
        <label>HMDA-Effective-2017</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2018</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2018</description>
        <label>HMDA-Effective-2018</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>